--- a/src/XyzInc.Application/XyzInc.Application.csproj
+++ b/src/XyzInc.Application/XyzInc.Application.csproj
@@ -10,4 +10,11 @@
     <ProjectReference Include="..\XyzInc.Core\XyzInc.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
